# music-player

./: .gitignore  Cargo.toml  README.md  history.txt  music_player_app.json
src/: main.rs  output.rs  playlist.rs  resampler.rs
src/app/: app.rs  library.rs  meter.rs  mod.rs  output.rs  player.rs  playlist.rs  rms_calculator.rs  scope.rs
src/app/components/: footer.rs  library_component.rs  menu_bar.rs  mod.rs  player_component.rs  playlist_table.rs  playlist_tabs.rs  scope_component.rs
src/config/: app_config.rs  mod.rs
src/stuff/: library.rs  mod.rs  player.rs  playlist.rs
