[package]
name = "music-player"
version = "0.1.0"
authors = ["Ryan Blecher <notryanb@gmail.com>"]
edition = "2021"

[dependencies]
cpal = "0.15"
eframe = "0.27.2"
id3 = "1.13"
itertools = "0.12"
rayon = "1.10"
rfd = "0.6"
serde = { version = "1", features=["derive"] }
serde_json = "1"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
log = { version = "0.4", features = ["release_max_level_info"] }
walkdir = "2.5"
rubato = "0.12.0"
rand = "0.8.5"
symphonia = { version = "0.5.4", features = ["mp3"] }
arrayvec = "0.7.4"
rb = "0.4.1"

[dependencies.confy]
version = "0.6.1"
features = ["yaml_conf"]
default-features = false

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }
